tdf#93121 MSO export: stop adding aesthetic tabs before footnotes

duplicate bug 112886 (and this unit test from bug 90810) show that
sometimes another tab is added on each round-trip.

This "aesthetic" tab insert has caused numerous bug reports over the
years with numerous different fixes. An eample is the commit to
"avoid fake tab char in footnotes" in 2013.

It also simply creates inaccurate exports which don't reproduce
the original document.

This aesthetic tab insertion was inherited from OOo,
affecting both footnotes and endnotes in .doc, .docx, and .rtf.

Change-Id: Ifcd3222610329d1f322ed0f62205fd1eb841329c